--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
 
     <link rel="icon" href="/favicons/pokebolaicons.png">
     <link rel="stylesheet" href="/css/style.css">
+
+    <script defer src="./js/script.js"></script>
+
     <title>Pokedéx</title>
 </head>
 <body>
     <main>
-        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/versions/generation-v/black-white/animated/6.gif" alt="pokemon" class="pokemon_imagem">
+        <img src="#" alt="pokemon" class="pokemon_imagem">
 
         <h1 class="pokemon_data">
-            <span class="pokemon_number">6 -</span>  
-            <span class="pokemon_nome">Charizard</span>
+            <span class="pokemon_number">-</span>  
+            <span class="pokemon_name"></span>
         </h1>
 
         <form class="form">
